@@ -2,8 +2,8 @@ package com.example.service;
 
 import static com.example.config.Constants.IMAGE_URL;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.stereotype.Service;
 
@@ -42,71 +42,72 @@ public class FlexMessageService {
                                      .size(ImageSize.FULL_WIDTH)
                                      .aspectRatio(ImageAspectRatio.R20TO13)
                                      .aspectMode(ImageAspectMode.Cover)
-                                     .action(new URIAction("label", "https://developers.line.me"))
+                                     .action(new URIAction("label", "https://developers.line.me", null))
                                      .build();
 
         final Box bodyBlock = Box.builder()
                                  .layout(FlexLayout.VERTICAL)
-                                 .contents(Arrays.asList(Text.builder()
-                                                             .text("text1")
-                                                             .weight(TextWeight.BOLD)
-                                                             .size(FlexFontSize.XL)
-                                                             .build(),
-                                                         Box.builder()
-                                                            .layout(FlexLayout.BASELINE)
-                                                            .margin(FlexMarginSize.MD)
-                                                            .contents(Arrays.asList(
-                                                                    Icon.builder()
-                                                                        .size(FlexFontSize.SM)
-                                                                        .url(IMAGE_URL)
-                                                                        .build(),
-                                                                    Text.builder()
-                                                                        .text("text2")
-                                                                        .size(FlexFontSize.SM)
-                                                                        .color("#999999")
-                                                                        .margin(FlexMarginSize.MD)
-                                                                        .flex(0)
-                                                                        .build()))
-                                                            .build(),
-                                                         Box.builder()
-                                                            .layout(FlexLayout.VERTICAL)
-                                                            .margin(FlexMarginSize.LG)
-                                                            .spacing(FlexMarginSize.SM)
-                                                            .contents(Collections.singletonList(
-                                                                    Box.builder()
-                                                                       .layout(FlexLayout.BASELINE)
-                                                                       .spacing(FlexMarginSize.SM)
-                                                                       .contents(Arrays.asList(
-                                                                               Text.builder()
-                                                                                   .text("text3")
-                                                                                   .flex(1)
-                                                                                   .build(),
-                                                                               Text.builder()
-                                                                                   .text("text4")
-                                                                                   .wrap(true)
-                                                                                   .flex(5)
-                                                                                   .build()))
-                                                                       .build()))
-                                                            .build()))
+                                 .contents(List.of(Text.builder()
+                                                       .text("text1")
+                                                       .weight(TextWeight.BOLD)
+                                                       .size(FlexFontSize.XL)
+                                                       .build(),
+                                                   Box.builder()
+                                                      .layout(FlexLayout.BASELINE)
+                                                      .margin(FlexMarginSize.MD)
+                                                      .contents(List.of(
+                                                              Icon.builder()
+                                                                  .size(FlexFontSize.SM)
+                                                                  .url(IMAGE_URL)
+                                                                  .build(),
+                                                              Text.builder()
+                                                                  .text("text2")
+                                                                  .size(FlexFontSize.SM)
+                                                                  .color("#999999")
+                                                                  .margin(FlexMarginSize.MD)
+                                                                  .flex(0)
+                                                                  .build()))
+                                                      .build(),
+                                                   Box.builder()
+                                                      .layout(FlexLayout.VERTICAL)
+                                                      .margin(FlexMarginSize.LG)
+                                                      .spacing(FlexMarginSize.SM)
+                                                      .contents(Collections.singletonList(
+                                                              Box.builder()
+                                                                 .layout(FlexLayout.BASELINE)
+                                                                 .spacing(FlexMarginSize.SM)
+                                                                 .contents(List.of(
+                                                                         Text.builder()
+                                                                             .text("text3")
+                                                                             .flex(1)
+                                                                             .build(),
+                                                                         Text.builder()
+                                                                             .text("text4")
+                                                                             .wrap(true)
+                                                                             .flex(5)
+                                                                             .build()))
+                                                                 .build()))
+                                                      .build()))
                                  .build();
 
         final Box footerBlock = Box.builder()
                                    .layout(FlexLayout.VERTICAL)
                                    .spacing(FlexMarginSize.SM)
-                                   .contents(Arrays.asList(Spacer.builder().build(),
-                                                           Button.builder()
-                                                                 .style(ButtonStyle.LINK)
-                                                                 .height(ButtonHeight.SMALL)
-                                                                 .action(new URIAction("LINE",
-                                                                                       "https://line.me"))
-                                                                 .build(),
-                                                           Separator.builder().build(),
-                                                           Button.builder()
-                                                                 .style(ButtonStyle.LINK)
-                                                                 .height(ButtonHeight.SMALL)
-                                                                 .action(new URIAction("LINE Developers",
-                                                                                       "https://developers.line.me"))
-                                                                 .build()))
+                                   .contents(List.of(Spacer.builder().build(),
+                                                     Button.builder()
+                                                           .style(ButtonStyle.LINK)
+                                                           .height(ButtonHeight.SMALL)
+                                                           .action(new URIAction("LINE", "https://line.me",
+                                                                                 null))
+                                                           .build(),
+                                                     Separator.builder().build(),
+                                                     Button.builder()
+                                                           .style(ButtonStyle.LINK)
+                                                           .height(ButtonHeight.SMALL)
+                                                           .action(new URIAction("LINE Developers",
+                                                                                 "https://developers.line.me",
+                                                                                 null))
+                                                           .build()))
                                    .build();
 
         final Bubble bubble = Bubble.builder()
